Bump up the Java platform version to 24